fix: contact name overflow

--- a/style/contacts.css
+++ b/style/contacts.css
@@ -170,9 +170,9 @@ ul {
 
 /* Contact Card */
 #contact-card {
-    margin-top: 50px;
-    width: fit-content;
-    max-width: 100%;
+    margin-top: 20px;
+    width: 100%;
+    max-width: 800px;
     opacity: 0;
     transform: translateX(100vw);
     transition: all 400ms ease-out;
@@ -190,6 +190,7 @@ ul {
     display: flex;
     flex-direction: column;
     gap: 20px; 
+    margin-left: 150px;
 }
 
 .contact-name {
@@ -199,6 +200,10 @@ ul {
     line-height: 120%;
     color: #000000;
     white-space: nowrap;
+    width: 100%;
+    max-width: 450px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .edit-and-delete-btn-container {
@@ -246,6 +251,7 @@ ul {
     align-items: center;
     gap: 54px;
     margin-top: 40px;
+    width: 100%;
     
 }
 
@@ -317,7 +323,7 @@ ul {
 
 /* Contact Initials */
 .contact-initials {
-    position: relative;
+    position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
