--- a/style/contacts_responsive.css
+++ b/style/contacts_responsive.css
@@ -4,8 +4,12 @@
         left: 5%;
     }
 
+    .contact-name {
+        font-size: 38px;
+    }
+
     .slogan-and-card-container {
-        padding: 0;
+        padding: 30px;
         width: 100%;
     }
 
@@ -56,6 +60,7 @@
 
     .contact-name {
         font-size: 26px;
+        max-width: 300px;
     }
 }
 
@@ -65,17 +70,22 @@
     }
 
     .slogan-and-card-container {
-        padding: 40px;
+        padding: 20px;
+    }
+
+    .contact-name {
+        max-width: 250px;
     }
 }
 
-@media (max-width: 910px) {
+@media (max-width: 980px) {
     .slogan {
         padding: 0;
     }
 
     .contact-name {
         font-size: 22px;
+        max-width: 150px;
     }
 
     #contact-card.show {
@@ -84,6 +94,12 @@
 
     .slogan-and-card-container {
         padding: 20px;
+    }
+}
+
+@media (max-width: 900px) {
+    .slogan-and-card-container {
+        padding: 20px 0 0 0;
     }
 }
 
@@ -187,6 +203,8 @@
     .btn-and-name-container {
         display: flex;
         flex-direction: column;
+        margin-left: 150px;
+
     }
 
     .content-slogan {
@@ -194,6 +212,7 @@
         flex-direction: column;
         max-width: 432px;
         box-sizing: border-box;
+        margin-bottom: 10px;
     }
 
     .contact-item {
@@ -211,11 +230,11 @@
         height: 32px;
         top: 0;
         right: 5%;
-        margin-top: -110px;
+        margin-top: -90px;
     }
 
     .mobile-edit-container {
-        position: fixed;
+        position: relative;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -224,10 +243,10 @@
         border-radius: 56%;
         height: 50px;
         width: 50px;
-        bottom: 20px; 
-        right: 10%;
         z-index: 1000;
         transition: all 0.2s ease-in-out;
+        left: 85%;
+        top: 90%;
     }
 
     .mobile-edit-container:hover {
@@ -363,6 +382,7 @@
     line-height: 120%;
     color: #000000;
     white-space: nowrap;
+    max-width: 500px;
 }
 
     .mobile-menu {
@@ -375,7 +395,6 @@
     }
 
     .contact-initials {
-        position: relative;
         top: 20;
     }
 
@@ -443,7 +462,7 @@
         }
 
         .contact-info-header {
-            margin-top: 20px;
+            margin-top: 40px;
         }
         
         #close-card-btn {
@@ -460,6 +479,12 @@
             padding-top: 8px;
             padding-bottom: 8px;
         }
+    }
+}
+
+@media (max-width: 700px) {
+    .contact-name {
+        max-width: 300px;
     }
 }
 
@@ -495,14 +520,22 @@
     }
 
     .contact-initials {
-        position: relative;
-        top: 0;
         width: 100px;
         height: 100px;
     }
 
+    .btn-and-name-container {
+        margin-left: 100px;
+    }
+
     .check-icon {
         margin-left: 24%;
+    }
+}
+
+@media (max-width: 400px) {
+    .contact-name {
+        max-width: 200px;
     }
 }
 
